part2/ex201/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cluster-ingress
  labels:
      name: cluster-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          serviceName: kube-todo-service
          servicePort: 18000
      - pathType: Prefix
        path: "/uuid-app"
        backend:
          serviceName: uuid-app-http-service
          servicePort: 18083
      - pathType: Prefix
        path: "/pingpong"
        backend:
          serviceName: pong-app-http-service
          servicePort: 18084
